codepkg/objects/Faculty__c.object
<CustomObject>
    <fields>
        <fullName>Head_of_faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of faculty</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Faculties (Head of faculty)</relationshipLabel>
        <relationshipName>Faculties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saff_Amount__c</fullName>
        <label>Saff Amount</label>
        <summaryForeignKey>Employee__c.Faculty__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Student_Amount__c</fullName>
        <label>Student Amount</label>
        <summarizedField>Group__c.Student_Amount__c</summarizedField>
        <summaryForeignKey>Group__c.Faculty__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Faculty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>